--- a/PyTime_Project/core/templates/errors/400.html
+++ b/PyTime_Project/core/templates/errors/400.html
@@ -7,18 +7,18 @@
 
 {% block main-container %}
     <div class="main_content">
-        <div class="error_404 d-flex align-items-center justify-content-between">
-            <div class="error_404_left_side d-flex flex-column justify-content-center">
-                <h2 class="error_404_title mb-0">
+        <div class="error_block d-flex align-items-center justify-content-between">
+            <div class="error_block_left_side d-flex flex-column justify-content-center">
+                <h2 class="error_block_title mb-0">
                     Ошибка 400
                 </h2>
                 
-                <p class="error_404_text mb-0">
+                <p class="error_block_text mb-0">
                     Ваш браузер отправил некорректный запрос. Возможно, у вас неправильный адрес или у вас устаревшая ссылка. Пожалуйста, очистите свой адрес и попробуйте отправить запрос еще раз.
                 </p>
             </div>
 
-            <img class="error_404_img" src="{% static 'img/errors/404.jpg' %}">
+            <img class="error_right_side_img" src="{% static 'img/errors/404.jpg' %}">
         </div>
     </div>
 {% endblock main-container %}
