--- a/PyTime_Project/core/templates/recovery_password/enter_new_password.html
+++ b/PyTime_Project/core/templates/recovery_password/enter_new_password.html
@@ -1,1 +1,52 @@
-enter_new_password
+{% extends 'base.html' %}
+{% load static %}
+
+{% block title %}
+	PyTime - Восстановление доступа
+{% endblock title %}
+
+{% block main-container %}
+	<div class="main_content">
+		<div class="authentication_content d-flex align-items-center justify-content-center">
+			<div class="authentication_block">
+				<p class="authentication_title">
+					Установите новый пароль
+				</p>
+
+				<form action="#" class="authentication_form_block">
+					<div class="authentication_input_block">
+						<p class="authentication_input_title">
+							Пароль
+						</p>
+						<input required type="password" placeholder="Введите новый пароль" class="authentication_input">
+					</div>
+
+					<div class="authentication_input_block">
+						<p class="authentication_input_title">
+							Пароль
+						</p>
+						<input required type="password" placeholder="Повторите новый пароль" class="authentication_input">
+					</div>
+
+					<!-- Кнопка отправки кода -->
+					<div class="authentication_button_block d-flex justify-content-center">
+						<!-- {% url "articlesPage" as articlesUrl %} -->
+		                {% include "buttons/button_black_background.html" with name="Подтвердить" %}
+					</div>
+				</form>
+
+				<hr class="authentication_line">
+
+				<div class="authentication_create_account_block d-flex justify-content-between align-items-center">
+					<p class="authentication_text mb-0">
+						Помните свой пароль?
+					</p>
+
+					<!-- Кнопка регистрации -->
+					{% url "authorizationUser" as authorizationUserURl %}
+					{% include "buttons/button_white_background.html" with name="Войти" url_name=authorizationUserURl %}
+				</div>
+			</div>
+		</div>
+	</div>
+{% endblock %}
