--- a/PyTime_Project/core/templates/recovery_password/confirm_mail_by_code.html
+++ b/PyTime_Project/core/templates/recovery_password/confirm_mail_by_code.html
@@ -1,1 +1,51 @@
-confirm_mail_by_code
+{% extends 'base.html' %}
+{% load static %}
+
+{% block title %}
+	PyTime - Восстановление доступа
+{% endblock title %}
+
+{% block main-container %}
+	<div class="main_content">
+		<div class="authentication_content d-flex align-items-center justify-content-center">
+			<div class="authentication_block">
+				<p class="authentication_title">
+					Подтвердите почту
+				</p>
+
+				<p class="authentication_short_description">
+					Вам отправлен шестизначный код подтверждения на test@mail.ru. Введите его ниже, чтобы подтвердить свой адрес электронной почты.
+				</p>
+				
+				<form action="#" class="authentication_form_block">
+					<div class="authentication_input_block">
+						<p class="authentication_input_title">
+							Код
+						</p>
+
+						<input required type="text" placeholder="Введите шестизначный код" class="authentication_input" minlength="6" maxlength="6">
+					</div>
+
+					<!-- Кнопка отправки кода -->
+					<div class="authentication_button_block d-flex justify-content-center">
+						<!-- {% url "articlesPage" as articlesUrl %} -->
+		                {% include "buttons/button_black_background.html" with name="Отправить код" %}
+					</div>
+				</form>
+
+				<hr class="authentication_line">
+
+				<div class="authentication_create_account_block d-flex justify-content-between align-items-center">
+					<p class="authentication_text mb-0">
+						Не получили код?
+					</p>
+
+					<!-- Кнопка повторной отправки кода -->
+					<a href="{% url 'badRequest' %}" class="authentication_link">
+						<u>Отправить повторно</u>
+					</a>
+				</div>
+			</div>
+		</div>
+	</div>
+{% endblock %}
