Добавлены страницы 503 ошибка, профиль и версия сайта для ноутбуков
1. Улучшены страницы с карточками статей и проектов.
2. Улучшены отступы в соглашениях.
3. Исправлены слова "Вас", "Вы", теперь они все написаны с большой буквы.
4. Добавлена страница профиля Пользователя.
5. Улучшена базовый шаблон страницы.

--- a/PyTime_Project/core/templates/agreements/privacy.html
+++ b/PyTime_Project/core/templates/agreements/privacy.html
@@ -25,7 +25,7 @@
             <p class="agreement_point_1">
                 1.1. Оператор ставит своей важнейшей целью и условием осуществления своей деятельности соблюдение прав и свобод человека и гражданина при обработке его персональных данных, в том числе защиты прав на неприкосновенность частной жизни, личную и семейную тайну.
             </p>
-            <p class="agreement_point_1">
+            <p class="agreement_point_1 mb-0">
                 1.2. Настоящая политика Оператора в отношении обработки персональных данных (далее — Политика) применяется ко всей информации, которую Оператор может получить о посетителях веб-сайта https://pytime.ru.
             </p>
 
@@ -73,7 +73,7 @@
             <p class="agreement_point_1">
                 2.13. Трансграничная передача персональных данных — передача персональных данных на территорию иностранного государства органу власти иностранного государства, иностранному физическому или иностранному юридическому лицу.
             </p>
-            <p class="agreement_point_1">
+            <p class="agreement_point_1 mb-0">
                 2.14. Уничтожение персональных данных — любые действия, в результате которых персональные данные уничтожаются безвозвратно с невозможностью дальнейшего восстановления содержания персональных данных в информационной системе персональных данных и/или уничтожаются материальные носители персональных данных.
             </p>
 
@@ -118,7 +118,7 @@
             <p class="agreement_point_2">
                 3.2.7. прекратить передачу (распространение, предоставление, доступ) персональных данных, прекратить обработку и уничтожить персональные данные в порядке и случаях, предусмотренных Законом о персональных данных;
             </p>
-            <p class="agreement_point_2">
+            <p class="agreement_point_2 mb-0">
                 3.2.8. исполнять иные обязанности, предусмотренные Законом о персональных данных.
             </p>
 
@@ -158,7 +158,7 @@
             <p class="agreement_point_2">
                 4.2.2. сообщать Оператору об уточнении (обновлении, изменении) своих персональных данных.
             </p>
-            <p class="agreement_point_1">
+            <p class="agreement_point_1 mb-0">
                 4.3. Лица, передавшие Оператору недостоверные сведения о себе, либо сведения о другом субъекте персональных данных без согласия последнего, несут ответственность в соответствии с законодательством РФ.
             </p>
 
@@ -185,7 +185,7 @@
             <p class="agreement_point_1">
                 5.6. При обработке персональных данных обеспечивается точность персональных данных, их достаточность, а в необходимых случаях и актуальность по отношению к целям обработки персональных данных. Оператор принимает необходимые меры и/или обеспечивает их принятие по удалению или уточнению неполных или неточных данных.
             </p>
-            <p class="agreement_point_1">
+            <p class="agreement_point_1 mb-0">
                 5.7. Хранение персональных данных осуществляется в форме, позволяющей определить субъекта персональных данных, не дольше, чем этого требуют цели обработки персональных данных, если срок хранения персональных данных не установлен федеральным законом, договором, стороной которого, выгодоприобретателем или поручителем по которому является субъект персональных данных. Обрабатываемые персональные данные уничтожаются либо обезличиваются по достижении целей обработки или в случае утраты необходимости в достижении этих целей, если иное не предусмотрено федеральным законом.
             </p>
 
@@ -254,7 +254,7 @@
             <p class="agreement_point_1">
                 7.6. Осуществляется обработка персональных данных, доступ неограниченного круга лиц к которым предоставлен субъектом персональных данных либо по его просьбе (далее — общедоступные персональные данные).
             </p>
-            <p class="agreement_point_1">
+            <p class="agreement_point_1 mb-0">
                 7.7. Осуществляется обработка персональных данных, подлежащих опубликованию или обязательному раскрытию в соответствии с федеральным законом.
             </p>
 
@@ -293,7 +293,7 @@
             <p class="agreement_point_1">
                 8.9. Оператор осуществляет хранение персональных данных в форме, позволяющей определить субъекта персональных данных, не дольше, чем этого требуют цели обработки персональных данных, если срок хранения персональных данных не установлен федеральным законом, договором, стороной которого, выгодоприобретателем или поручителем по которому является субъект персональных данных.
             </p>
-            <p class="agreement_point_1">
+            <p class="agreement_point_1 mb-0">
                 8.10. Условием прекращения обработки персональных данных может являться достижение целей обработки персональных данных, истечение срока действия согласия субъекта персональных данных, отзыв согласия субъектом персональных данных или требование о прекращении обработки персональных данных, а также выявление неправомерной обработки персональных данных.
             </p>
 
@@ -305,7 +305,7 @@
             <p class="agreement_point_1">
                 9.1. Оператор осуществляет сбор, запись, систематизацию, накопление, хранение, уточнение (обновление, изменение), извлечение, использование, передачу (распространение, предоставление, доступ), обезличивание, блокирование, удаление и уничтожение персональных данных.
             </p>
-            <p class="agreement_point_1">
+            <p class="agreement_point_1 mb-0">
                 9.2. Оператор осуществляет автоматизированную обработку персональных данных с получением и/или передачей полученной информации по информационно-телекоммуникационным сетям или без таковой.
             </p>
 
@@ -317,7 +317,7 @@
             <p class="agreement_point_1">
                 10.1. Оператор до начала осуществления деятельности по трансграничной передаче персональных данных обязан уведомить уполномоченный орган по защите прав субъектов персональных данных о своем намерении осуществлять трансграничную передачу персональных данных (такое уведомление направляется отдельно от уведомления о намерении осуществлять обработку персональных данных).
             </p>
-            <p class="agreement_point_1">
+            <p class="agreement_point_1 mb-0">
                 10.2. Оператор до подачи вышеуказанного уведомления, обязан получить от органов власти иностранного государства, иностранных физических лиц, иностранных юридических лиц, которым планируется трансграничная передача персональных данных, соответствующие сведения.
             </p>
 
@@ -326,7 +326,7 @@
                 11. Конфиденциальность персональных данных
             </p>
 
-            <p class="agreement_text">
+            <p class="agreement_text mb-0">
                 Оператор и иные лица, получившие доступ к персональным данным, обязаны не раскрывать третьим лицам и не распространять персональные данные без согласия субъекта персональных данных, если иное не предусмотрено федеральным законом.
             </p>
 
@@ -341,7 +341,7 @@
             <p class="agreement_point_1">
                 12.2. В данном документе будут отражены любые изменения политики обработки персональных данных Оператором. Политика действует бессрочно до замены ее новой версией.
             </p>
-            <p class="agreement_point_1">
+            <p class="agreement_point_1 mb-0">
                 12.3. Актуальная версия Политики в свободном доступе расположена в сети Интернет по адресу https://pytime.ru/privacy.
             </p>
 
