--- a/PyTime_Project/core/templates/articles/article_page.html
+++ b/PyTime_Project/core/templates/articles/article_page.html
@@ -28,7 +28,7 @@
 
 		<div class="body_article">
 			<div class="article_text_block">
-				<p class="article_text">
+				<p class="article_text mb-0">
 					{{ articleData.text }}
 				</p>
 			</div>
