--- a/PyTime_Project/core/templates/errors/403.html
+++ b/PyTime_Project/core/templates/errors/403.html
@@ -14,7 +14,7 @@
                 </h2>
                 
                 <p class="error_block_text mb-0">
-                    Доступ запрещен. У вас нет прав для просмотра этой страницы. Войдите под другой учетной записью или попросите администратора дать вам доступ.
+                    Доступ запрещен. У Вас нет прав для просмотра этой страницы. Войдите под другой учетной записью или попросите администратора дать вам доступ.
                 </p>
             </div>
 
