--- a/PyTime_Project/core/templates/errors/404.html
+++ b/PyTime_Project/core/templates/errors/404.html
@@ -14,7 +14,7 @@
                 </h2>
                 
                 <p class="error_block_text mb-0">
-                    Кажется что-то пошло не так! Страница, которую вы запрашиваете, не существует. Возможно она устарела, была удалена, или был введен неверный адрес в адресной строке.
+                    Кажется что-то пошло не так! Страница, которую Вы запрашиваете, не существует. Возможно она устарела, была удалена, или был введен неверный адрес в адресной строке.
                 </p>
             </div>
 
