--- a/PyTime_Project/core/templates/errors/503.html
+++ b/PyTime_Project/core/templates/errors/503.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block title %}
-    PyTime - Bad Request
+    PyTime - Service Unavailable
 {% endblock title %}
 
 {% block main-container %}
@@ -10,11 +10,11 @@
         <div class="error_block d-flex align-items-center justify-content-between">
             <div class="error_block_left_side d-flex flex-column justify-content-center">
                 <h2 class="error_block_title mb-0">
-                    Ошибка 400
+                    Ошибка 503
                 </h2>
                 
                 <p class="error_block_text mb-0">
-                    Ваш браузер отправил некорректный запрос. Возможно, у Вас неправильный адрес или у вас устаревшая ссылка. Пожалуйста, очистите свой адрес и попробуйте отправить запрос еще раз.
+                    Данная страница находится в разработке или на техническом обслуживании. Пожалуйста, подождите несколько минут и попробуйте обновить страницу. Приносим извинения за временные неудобства. Мы уже работаем над решением проблемы.
                 </p>
             </div>
 
