--- a/PyTime_Project/core/templates/index.html
+++ b/PyTime_Project/core/templates/index.html
@@ -14,7 +14,7 @@
 			</h1>
 			
 			<p class="main_greeting_about p-0">
-				На этом сайте вы найдете портфолио проектов, статьи и полезные ресурсы, которые помогут вам лучше понять мои навыки. Я стремлюсь к постоянному развитию и готов поделиться своим опытом с вами.
+				На этом сайте Вы найдете портфолио проектов, статьи и полезные ресурсы, которые помогут Вам лучше понять мои навыки. Я стремлюсь к постоянному развитию и готов поделиться своим опытом с вами.
 			</p>
 
 			<!-- Buttons -->
