--- a/PyTime_Project/core/templates/projects/project_page.html
+++ b/PyTime_Project/core/templates/projects/project_page.html
@@ -28,7 +28,7 @@
 
 		<div class="body_project">
 			<div class="project_text_block">
-				<p class="project_text">
+				<p class="project_text mb-0">
 					{{ projectData.text }}
 				</p>
 			</div>
