--- a/PyTime_Project/templates/base.html
+++ b/PyTime_Project/templates/base.html
@@ -29,7 +29,7 @@
         <header class="header d-flex justify-content-between">
             <div class="header_left_side_block d-flex justify-content-between">
                 <!-- Logo -->
-                <div class="header_logo d-flex flex-row align-items-center justify-content-center">
+                <div class="header_logo d-flex align-items-center">
                     <a class="logo_link" href="{% url 'mainPage' %}" >
                         <img class="logo_img" src="{% static 'img/logo/logo.svg' %}">
                     </a>
@@ -58,9 +58,9 @@
         <hr class="base_content_separator">
 
         <!-- Footer -->
-        <footer class="footer d-flex justify-content-between" id="footer_id">
+        <footer class="footer d-flex justify-content-between">
             <!-- Logo -->
-            <div class="footer_logo d-flex align-items-center justify-content-center">
+            <div class="footer_logo d-flex align-items-center">
                 <a class="logo_link " href="{% url 'mainPage' %}" >
                     <img class="logo_img" src="{% static 'img/logo/logo.svg' %}">
                 </a>
