--- a/PyTime_Project/core/templates/agreements/user_agreement.html
+++ b/PyTime_Project/core/templates/agreements/user_agreement.html
@@ -33,7 +33,7 @@
             <p class="agreement_point_1">
                 1.5. Продолжение использования Сайта Пользователем означает принятие Соглашения и изменений, внесенных в настоящее Соглашение.
             </p>
-            <p class="agreement_point_1">
+            <p class="agreement_point_1 mb-0">
                 1.6. Пользователь несет персональную ответственность за проверку настоящего Соглашения на наличие изменений в нем.
             </p>
 
@@ -54,7 +54,7 @@
             <p class="agreement_point_2">
                 2.1.3. Пользователь сайта Интернет-ресурса (далее ‑ Пользователь) – лицо, имеющее доступ к Сайту, посредством сети Интернет и использующее Сайт.
             </p>
-            <p class="agreement_point_2">
+            <p class="agreement_point_2 mb-0">
                 2.1.4. Содержание сайта Интернет-ресурса (далее – Содержание) - охраняемые результаты интеллектуальной деятельности, пользовательские интерфейсы, визуальные интерфейсы, названия товарных знаков, логотипы, программы для ЭВМ, базы данных, а также дизайн, структура, выбор, координация, внешний вид, общий стиль и расположение данного Содержания, входящего в состав Сайта и другие объекты интеллектуальной собственности все вместе и (или) по отдельности, содержащиеся на сайте Интернет-ресурса.
             </p>
 
@@ -87,7 +87,7 @@
             <p class="agreement_point_1">
                 3.3. Настоящее Соглашение является публичной офертой. Получая доступ к Сайту Пользователь считается присоединившимся к настоящему Соглашению.
             </p>
-            <p class="agreement_point_1">
+            <p class="agreement_point_1 mb-0">
                 3.4. Использование материалов и сервисов Сайта регулируется нормами действующего законодательства Российской Федерации.
             </p>
 
@@ -210,7 +210,7 @@
             <p class="agreement_point_2">
                 4.4.6. Выполнять обратный поиск, отслеживать или пытаться отслеживать любую информацию о любом другом Пользователе Сайта.
             </p>
-            <p class="agreement_point_2">
+            <p class="agreement_point_2 mb-0">
                 4.4.7. Использовать Сайт и его Содержание в любых целях, запрещенных законодательством Российской Федерации, а также подстрекать к любой незаконной деятельности или другой деятельности, нарушающей права интернет-ресурса или других лиц.
             </p>
 
@@ -243,7 +243,7 @@
             <p class="agreement_point_1">
                 5.8. Настоящее Соглашение распространяет свое действия на все дополнительные положения и оказании услуг, предоставляемых на Сайте.
             </p>
-            <p class="agreement_point_1">
+            <p class="agreement_point_1 mb-0">
                 5.9. Информация, размещаемая на Сайте не должна истолковываться как изменение настоящего Соглашения.
             </p>
 
@@ -267,7 +267,7 @@
             <p class="agreement_point_2">
                 6.2.3. Содержание (контент) информации размещенной на Сайте.
             </p>
-            <p class="agreement_point_1">
+            <p class="agreement_point_1 mb-0">
                 6.3. Пользователь самостоятельно несет ответственность за интерпретацию и использование контента (информации), размещенного на Сайте.
             </p>
 
@@ -288,7 +288,7 @@
             <p class="agreement_point_1">
                 7.4. Собственник сайта вправе без предварительного уведомления Пользователя прекратить и (или) заблокировать доступ к Сайту, если Пользователь нарушил настоящее Соглашение или содержащиеся в иных документах условия пользования Сайтом, а также в случае прекращения действия Сайта либо по причине технической неполадки или проблемы.
             </p>
-            <p class="agreement_point_1">
+            <p class="agreement_point_1 mb-0">
                 7.5. Собственник сайта не несет ответственности перед Пользователем или третьими лицами за прекращение доступа к Сайту в случае нарушения Пользователем любого положения настоящего Соглашения или иного документа, содержащего условия пользования Сайтом.
             </p>
 
@@ -306,7 +306,7 @@
             <p class="agreement_point_1">
                 8.3. При невозможности разрешить спор в добровольном порядке любая из Сторон вправе обратиться в суд за защитой своих прав, которые предоставлены им действующим законодательством Российской Федерации.
             </p>
-            <p class="agreement_point_1">
+            <p class="agreement_point_1 mb-0">
                 8.4. Любой иск в отношении условий использования Сайта должен быть предъявлен в течение срока после возникновения оснований для иска, за исключением защиты авторских прав на охраняемые в соответствии с законодательством материалы Сайта. При нарушении условий данного пункта любой иск или основания для иска погашаются исковой давностью.
             </p>
 
@@ -318,7 +318,7 @@
             <p class="agreement_point_1">
                 9.1. Собственник сайта не принимает встречные предложения от Пользователя относительно изменений настоящего Пользовательского соглашения.
             </p>
-            <p class="agreement_point_1">
+            <p class="agreement_point_1 mb-0">
                 9.2. Отзывы Пользователя, размещенные на Сайте, не являются конфиденциальной информацией и могут быть использованы Собственником сайта без ограничений.
             </p>
         </div>
