--- a/PyTime_Project/core/templates/articles/articles.html
+++ b/PyTime_Project/core/templates/articles/articles.html
@@ -12,8 +12,8 @@
 			{% include 'include/check_last_articles.html' %}
 			
             {% if lastArticles|length != 0 %}
-                <div class="preview_articles_bottom_side d-flex flex-column justify-content-between">
-                    <div class="preview_articles_line d-flex justify-content-around">
+                <div class="preview_articles_bottom_side">
+                    <div class="preview_articles_line d-flex justify-content-between">
                         {% include 'include/cards/article_card.html' with articles=lastArticles %}
                     </div>
 
@@ -54,9 +54,9 @@
                 <!-- Img block -->
                 <div class="preview_last_article_right_side">
                     {% if lastArticle.image %}
-                        <img src="{{ lastArticle.image.url }}" class="article_card_img w-100 h-100">
+                        <img src="{{ lastArticle.image.url }}" class="preview_last_article_card_img">
                     {% else %}
-                        <img src="{% static 'img/404_IMG.png' %}" class="article_card_img w-100 h-100">
+                        <img src="{% static 'img/404_IMG.png' %}" class="preview_last_article_card_img">
                     {% endif %}
                 </div>
     		</div>
